; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_mv643xx_eth.c_phy_addr_set.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_mv643xx_eth.c_phy_addr_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mv643xx_eth_private = type { i32 }

@PHY_ADDR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mv643xx_eth_private*, i32)* @phy_addr_set to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @phy_addr_set(%struct.mv643xx_eth_private* %0, i32 %1) #0 {
  %3 = alloca %struct.mv643xx_eth_private*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.mv643xx_eth_private* %0, %struct.mv643xx_eth_private** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load %struct.mv643xx_eth_private*, %struct.mv643xx_eth_private** %3, align 8
  %8 = getelementptr inbounds %struct.mv643xx_eth_private, %struct.mv643xx_eth_private* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = mul nsw i32 5, %9
  store i32 %10, i32* %5, align 4
  %11 = load %struct.mv643xx_eth_private*, %struct.mv643xx_eth_private** %3, align 8
  %12 = load i32, i32* @PHY_ADDR, align 4
  %13 = call i32 @rdl(%struct.mv643xx_eth_private* %11, i32 %12)
  store i32 %13, i32* %6, align 4
  %14 = load i32, i32* %5, align 4
  %15 = shl i32 31, %14
  %16 = xor i32 %15, -1
  %17 = load i32, i32* %6, align 4
  %18 = and i32 %17, %16
  store i32 %18, i32* %6, align 4
  %19 = load i32, i32* %4, align 4
  %20 = and i32 %19, 31
  %21 = load i32, i32* %5, align 4
  %22 = shl i32 %20, %21
  %23 = load i32, i32* %6, align 4
  %24 = or i32 %23, %22
  store i32 %24, i32* %6, align 4
  %25 = load %struct.mv643xx_eth_private*, %struct.mv643xx_eth_private** %3, align 8
  %26 = load i32, i32* @PHY_ADDR, align 4
  %27 = load i32, i32* %6, align 4
  %28 = call i32 @wrl(%struct.mv643xx_eth_private* %25, i32 %26, i32 %27)
  ret void
}

declare dso_local i32 @rdl(%struct.mv643xx_eth_private*, i32) #1

declare dso_local i32 @wrl(%struct.mv643xx_eth_private*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
